# rust-mono-template

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  DESIGN.md  PLAN.md  PRODUCT.md  README.md  docker-compose.yml  lefthook.yml  package.json
apps/api/: CONTEXT.md  Cargo.toml
apps/api/docs/adr/: 0001-vertical-slice-clean-architecture-cqrs.md  0002-auth-better-auth-model-opaque-tokens.md  0003-sqlx-to-diesel.md
apps/api/migrations/20250701000000_initial/: up.sql
apps/api/migrations/20250701000001_auth/: down.sql  up.sql
apps/api/src/: contract.rs  lib.rs  main.rs
apps/api/src/bootstrap/: mod.rs
apps/api/src/features/auth/application/: deps.rs  mod.rs  result.rs
apps/api/src/features/auth/domain/: error.rs  mod.rs
apps/api/src/features/auth/infrastructure/: error.rs  mod.rs
apps/api/src/features/todo/domain/: error.rs  mod.rs
apps/api/src/features/todo/infrastructure/: error.rs  mod.rs
apps/api/src/features/user/application/: mod.rs
apps/api/src/features/user/domain/: error.rs  mod.rs
apps/api/src/features/user/infrastructure/: error.rs
apps/api/src/migration/: m20250701_000001_initial.rs  m20250701_000002_auth.rs  m20250701_000004_add_todo_indexes.rs  m20250704_000001_soft_delete_and_indexes.rs  m20250704_000002_add_todo_fts.rs  mod.rs
apps/api/src/shared/: mod.rs
apps/api/src/shared/application/: mod.rs  unit_of_work.rs
apps/api/src/shared/infrastructure/: mod.rs
apps/api/src/shared/kernel/: error.rs  mod.rs  user_id.rs
apps/api/src/shared/presentation/: health.rs  mod.rs
apps/api/tests/: typegen.rs
plans/: config.md  (+6 more)
(+169 files in other folders)
