[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
] }
sea-orm-migration = "1"
uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
argon2 = { version = "0.5", features = ["rand"] }
axum-extra = { version = "0.10", features = ["cookie"] }
rand = "0.8"
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower_governor = "0.8"
dotenvy = "0.15"
ts-rs = { version = "12", features = ["chrono-impl"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }

[dev-dependencies]
rstest = "0.25"
mockall = "0.13"
serde_json = "1"
